# rockchip_stats

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  USEAGE.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-and-publish.yml
examples/: quick_read.py  rtop_cpu.py  rtop_npu.py  rtop_server.py
rtop/: __init__.py  __main__.py  rockchip_release.py  rtop.py  service.py  terminal_colors.py
rtop/core/: __init__.py  command.py  common.py  config.py  cpu.py  exceptions.py  fan.py  gpu.py  hardware.py  hw_detect.py  memory.py  mpp.py  npu.py  power.py  process.py  processes.py  rga.py  rockchip_libraries.py  temperature.py  timer_reader.py
rtop/gui/: __init__.py  pall.py  pcontrol.py  pcpu.py  pengine.py  pgpu.py  pinfo.py  pmem.py  pnpu.py  rtopgui.py  rtopguiconfig.py
rtop/gui/lib/: __init__.py  chart.py  colors.py  common.py  dialog_window.py  linear_gauge.py  process_table.py  smallbutton.py
rtop/tests/: __init__.py  conftest.py  test_common.py  test_hw_detect.py
scripts/: rtop_env.sh
services/: rtop.service
